# nominal-lstar

./: .gitignore  .stylish-haskell.yaml  NominalAngluin.cabal  README.md  fourmolu.yaml  nominal-lstar.cabal  run.sh
app/: Main.hs  Main2.hs
bench/: Bench.hs
src/: AbstractLStar.hs  Angluin.hs  Bollig.hs  BooleanObservationTable.hs  Examples.hs  Functions.hs  Main.hs  Main2.hs  NLStar.hs  ObservationTable.hs  ObservationTableClass.hs  SimpleObservationTable.hs  Teacher.hs
src/Examples/: Contrived.hs  ContrivedNFAs.hs  Fifo.hs  NonResidual.hs  Residual.hs  RunningExample.hs  Stack.hs
src/Teachers/: Teacher.hs  Terminal.hs  Whitebox.hs
test/: Spec.hs
