name:                NominalAngluin
version:             0.1.0.0
license:             UnspecifiedLicense
author:              Joshua Moerman
copyright:           (c) 2016, Joshua Moerman
build-type:          Simple
cabal-version:       >=1.10

executable NominalAngluin
  main-is:             Main.hs
  other-modules:
    AbstractLStar,
    Angluin,
    Bollig,
    Examples,
    Examples.Contrived,
    Examples.ContrivedNFAs,
    Examples.Fifo,
    Examples.RunningExample,
    Examples.Stack,
    NLStar,
    ObservationTable,
    Teacher
  build-depends:
    base >= 4.8 && < 5,
    containers,
    deepseq,
    haskeline,
    mtl,
    NLambda >= 1.1
  hs-source-dirs:      src
  default-language:    Haskell2010
