cabal-version:       2.2
name:                nominal-lstar
version:             0.1.0.0
author:              Joshua Moerman
copyright:           (c) 2016 - 2023, Joshua Moerman
build-type:          Simple
extra-source-files:  README.md

common stuff
  default-language:  Haskell2010
  ghc-options:       -O2 -Wall
  build-depends:
    -- at most 4.17: one transitive dependency breaks with more recent base
    base >= 4.8 && < 4.17,
    haskeline,
    NLambda >= 1.1

library
  import: stuff
  hs-source-dirs: src
  exposed-modules:
    AbstractLStar,
    Angluin,
    Bollig,
    BooleanObservationTable,
    Examples,
    Examples.Contrived,
    Examples.ContrivedNFAs,
    Examples.Fifo,
    Examples.NonResidual,
    Examples.Residual,
    Examples.RunningExample,
    Examples.Stack,
    ObservationTableClass,
    SimpleObservationTable,
    Teacher,
    Teachers.Teacher,
    Teachers.Terminal,
    Teachers.Whitebox

executable nominal-lstar
  import: stuff
  hs-source-dirs: app
  main-is: Main.hs
  build-depends:
    nominal-lstar

executable nominal-lstar2
  import: stuff
  hs-source-dirs: app
  main-is: Main2.hs
  build-depends:
    nominal-lstar

benchmark bench
  import: stuff
  hs-source-dirs: bench
  type: exitcode-stdio-1.0
  main-is: Bench.hs
  build-depends:
    gauge,
    nominal-lstar

test-suite test
  import: stuff
  hs-source-dirs: test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  build-depends:
    gauge,
    nominal-lstar
